<resources xmlns:xliff="http://schemas.android.com/apk/res-auto">

    <!-- General App Strings -->
    <string name="app_name" translatable="false">Sunshine</string>

    <!-- Menu Items -->
    <string name="action_settings">Settings</string>
    <string name="action_refresh">Refresh</string>
    <string name="action_view_location">View Location</string>
    <string name="action_share">Share</string>


    <!-- Detail screen -->
    <string name="title_activity_detail" translatable="false">DetailActivity</string>

    <!-- Settings -->
    <string name="title_activity_settings">Settings</string>

    <string name="pref_location_label">Location</string>
    <string name="pref_location_key" translatable="false">location</string>
    <string name="pref_location_default" translatable="false">94043</string>

    <string name="pref_temp_unit_key">temp_unit</string>
    <string name="pref_temp_unit_title">Temperature Units</string>
    <string name="pref_temp_unit_summary">Choose your favorite temperature unit</string>
    <string name="pref_temp_unit_default" translatable="false">metric</string>

    <!-- Date label when displaying today's weather forecast [CHAR LIMIT=20] -->
    <string name="today">Today</string>

    <!-- Date label when displaying tomorrow's weather forecast [CHAR LIMIT=20] -->
    <string name="tomorrow">Tomorrow</string>

    <!-- Date format for displaying day of week and date (i.e. Mon Jun 1) [CHAR LIMIT=20] -->
    <string name="format_full_friendly_date"><xliff:g id="day">%1$s</xliff:g>, <xliff:g id="date">%2$s</xliff:g></string>


</resources>
