<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <!-- Location -->
    <EditTextPreference
        android:key="@string/pref_location_key"
        android:title="@string/pref_location_label"
        android:defaultValue="@string/pref_location_default"
        android:selectAllOnFocus="true"
        android:inputType="text"
        android:singleLine="true"/>

    <ListPreference
        android:key="@string/pref_temp_unit_key"
        android:title="@string/pref_temp_unit_title"
        android:summary="@string/pref_temp_unit_summary"
        android:dialogTitle="@string/pref_temp_unit_title"
        android:entries="@array/pref_temp_entries"
        android:entryValues="@array/pref_temp_values"
        android:defaultValue="@string/pref_temp_unit_default" />

</PreferenceScreen>
